Gliding-assay IC pad enlarged to 1.5x stdFilSegLength — absorbs step-1 split extension
The 2026-06-02 pad (0.5x stdFilSegLengthUM) was correct for the single-segment
IC end2 (6.91395 µm, 86 nm clear) but undersized for the post-step-1 chain.
FilSegment.splitSegment() places nextFil at original_end2 + (0.5*nextFilLength
- actinMonoRadius)*uVec, extending the chain end by ~1*stdFilSegLengthUM (~173
nm) beyond original_end2 on the first split. 0.5x covered the centroid shift
but not the end-of-chain shift; 1.5x keeps the post-step-1 chain end inside
the +x wall by ~80 nm.

Shared code; CPU and GPU paths inherit the fix.

Validation (seed=1, glidingAssay500_val, 10000 steps):

| run       | pre-fix (be/mbm/gv)   | post-fix (be/mbm/gv)   |
|-----------|-----------------------|------------------------|
| resident  | 679 / 6.11 / 7.93     | 879 / 7.70 / 8.16      |
| refreshed | 809 / 7.85 / 7.56     | 664 / 6.25 / 6.52      |
| poison    | 202 / 1.91 / 5.49     | 221 / 1.94 / 11.14     |
| CPU       | —                     | 932 / 7.66 / 7.90      |

Multi-seed mini-comparison (4 seeds, resident vs refreshed) collapses the
resident/refreshed gap to mean +6.5 bindEvents (~0.9%) — pre-fix +19% gap
was the IC recovery transient, not a steady-state staleness signal.
Phase 4.5 inherits a clean baseline. The poison HIT persists (-75%) — real
geometric coupling, not IC-amplification; device-pack pose-buffer hunt
remains the next probe target.

JOURNAL.md picks up the fix entry, multi-seed table, and a correction to
the 2026-06-02 entry's "downstream behavior, not an IC issue" framing.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>